# tesseract

./: CMakeLists.txt  README  README.md
src/: CMakeLists.txt
